Full documentation: http://jonreid.github.com/OCHamcrest/
Latest sources: https://github.com/jonreid/OCHamcrest
Hamcrest information: http://code.google.com/p/hamcrest/

== NEXT VERSION IN PROGRESS

* Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.


== Version 1.4 ==

13 Feb 2011
* New matchers:
 - "hasEntries" matches dictionary containing key-value pairs satisfying a given list of alternating keys and value matchers.

* Added complete descriptions to macros so they appear in Xcode 4 Quick Help. (Couldn't add arguments to macros without breaking backwards compatibility.)

* Improved descriptions:
 - Improved description of "hasEntry", removing colon so it doesn't get truncated in Xcode's error display.
 - "is" no longer says "is ..." in its description, but just lets the inner description pass through.
 - Consistently use articles to begin descriptions, such as "a dictionary containing" instead of "dictionary containing".


== Version 1.3 ==

05 Jan 2011
* Improved descriptions and mismatch descriptions of several matchers, including:
  - Fixed "contains" and "containsInAnyOrder" to describe mismatch if item is not a collection.
  - Fixed "describedAs" and "is" to use their nested matchers to generate mismatch descriptions.
  - "sameInstance" is more readable, and includes object memory addresses.
  - If object has a count, "hasCount" mismatch describes actual count.
  - Don't wrap angle brackets around a description that already has them.
  - Improved readability of several matchers.

* "instanceOf" now guards against nil being passed as the expected type.


== Version 1.2 ==

03 Jan 2011
* New matchers:
  - "hasCount" matches collections for which -count satisfies a given matcher.
  - "hasCountOf" matches collections for which -count equals a given count.
  - "empty" matches empty collection.
