@@ -5,6 +5,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 == NEXT VERSION IN PROGRESS
 
 * Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.
+* Changed sameInstance mismatch description to omit 0x0 address when describing nil argument.
 
 
 == Version 1.4 ==
